fix findbar not being visible with latest update

--- a/src/Extras/FindBar/BetterFindBar.scss
+++ b/src/Extras/FindBar/BetterFindBar.scss
@@ -12,6 +12,7 @@
       border-bottom: 1px solid var(--chrome-content-separator-color);
       border-right: 1px solid var(--chrome-content-separator-color);
       border-bottom-right-radius: 4px;
+      contain: content;
 
       &[hidden] {
         display: flex !important;
